added missing translations

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -223,6 +223,8 @@
     "reports.a7.cert-type.v": "Vaccination certificates – issue period in Switzerland: as of 07.06.2021",
     "reports.a7.cert-type.vt": "Tourist certificates (WHO vaccine) – issue period in Switzerland: 30.11.2021 to 16.02.2022",
     "reports.a7.ch-certs": "Swiss certificates:",
+    "reports.a7.date-from": "Start date",
+    "reports.a7.date-to": "End date",
     "reports.a7.description.long": "<strong>What issuer issued what number of a specific certificate type in a defined period?</strong></br></br>After you select a certificate type this report provides you with a list of issuers and the number of certificates of this type issued in each case.",
     "reports.a7.description.short": "Overview of all issuers of a specific certificate type, including issuing channel, for a defined period.",
     "reports.a7.eu-compatible-certs": "EU-compatible certificates",
@@ -230,6 +232,7 @@
     "reports.a7.select-all-cert-types": "Select all certificate types",
     "reports.a7.select-cert-types": "Please choose the certificate type(s) for which you want to generate the report:",
     "reports.a7.selected-dataroom": "Canton/area selected:",
+    "reports.a7.startDateBeforeEndDate": "Start date must not be after the end date",
     "reports.a7.title": "A7 / A10",
     "reports.a8.description.long": "<strong>How many certificates of the various certificate types were issued per week (max. last 3 months) via which channels?</strong></br></br>This report provides you with a weekly list of certificate types and the number of each per issuing channel (one worksheet per week). The second to nth worksheet also shows the difference to the previous week.",
     "reports.a8.description.short": "Weekly number of certificates of each type, broken down by issuing channel.",
