--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -223,6 +223,8 @@
     "reports.a7.cert-type.v": "Certificats de vaccination – Émission en Suisse : à partir du 07.06.2021",
     "reports.a7.cert-type.vt": "Certificats pour touristes (vaccins OMS) – Émission en Suisse : du 30.11.2021 au 16.02.2022",
     "reports.a7.ch-certs": "Certificats suisses:",
+    "reports.a7.date-from": "Date de début",
+    "reports.a7.date-to": "Date de fin",
     "reports.a7.description.long": "<strong>Quel émetteur a délivré quelle quantité d’un type de certificat spécifique au cours d’une période donnée?</strong></br></br>Après sélection d’un type de certificat, ce rapport vous fournit une liste des émetteurs et le nombre de certificats délivrés pour ce type de certificat.",
     "reports.a7.description.short": "Aperçu de tous les émetteurs d’un certain type de certificat, y compris le canal d’émission pour une période donnée.",
     "reports.a7.eu-compatible-certs": "Certificats compatibles avec l’UE",
@@ -230,6 +232,7 @@
     "reports.a7.select-all-cert-types": "Alle Zertifikatstypen auswählen",
     "reports.a7.select-cert-types": "Veuillez sélectionner le(s) type(s) de certificat pour le(s)quel(s) vous souhaitez générer le rapport:",
     "reports.a7.selected-dataroom": "Canton/domaine sélectionné:",
+    "reports.a7.startDateBeforeEndDate": "La date de début ne doit pas être postérieure à la date de fin",
     "reports.a7.title": "A7 / A10",
     "reports.a8.description.long": "<strong>Combien de certificats des différents types ont été délivrés par semaine (max. 3 derniers mois) et par quels canaux ?</strong></br></br>Ce rapport vous fournit une liste hebdomadaire des types de certificats et de leur nombre respectif par canal d’émission (une feuille de calcul par semaine). La deuxième à la xième feuille de calcul indiquent en outre le total de la différence par rapport à la semaine précédente.",
     "reports.a8.description.short": "Nombre hebdomadaire de certificats par type, ventilé par canal d’émission.",
