--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -223,6 +223,8 @@
     "reports.a7.cert-type.v": "Impfzertifikate – Ausstellung in der Schweiz: ab 07.06.2021",
     "reports.a7.cert-type.vt": "Touristenzertifikate (WHO-Impfstoff) – Ausstellung in der Schweiz: 30.11.2021 bis 16.02.2022",
     "reports.a7.ch-certs": "Schweizer Zertifikate:",
+    "reports.a7.date-from": "Anfangsdatum",
+    "reports.a7.date-to": "Enddatum",
     "reports.a7.description.long": "<strong>Welche/r Aussteller/in hat welche Anzahl eines spezifischen Zertifikatstyps in einem definierten Zeitraum ausgestellt? </strong></br></br>Dieser Report liefert Ihnen, nach Auswahl eines Zertifikatstyps, eine Liste von Aussteller/innen und die jeweilige Anzahl ausgestellter Zertifikate dieses Typs. ",
     "reports.a7.description.short": "Übersicht aller Aussteller/innen eines bestimmten Zertifikatstyps inkl. Ausstellkanal für einen definierten Zeitraum.",
     "reports.a7.eu-compatible-certs": "EU-kompatible Zertifikate",
@@ -230,6 +232,7 @@
     "reports.a7.select-all-cert-types": "Alle Zertifikatstypen auswählen",
     "reports.a7.select-cert-types": "Bitte wählen Sie den/die Zertifikatstypen aus, für den/die Sie den Report generieren wollen:",
     "reports.a7.selected-dataroom": "Ausgewählter Kanton/Bereich:",
+    "reports.a7.startDateBeforeEndDate": "Anfangsdatum darf nicht nach dem Enddatum liegen",
     "reports.a7.title": "A7 / A10",
     "reports.a8.description.long": "<strong>Wie viele Zertifikate der verschiedenen Zertifikatstypen wurden pro Woche (max. letzte 3 Monate) über welche Kanäle ausgestellt?</strong></br></br>Dieser Report liefert Ihnen eine wochenweise Liste von Zertifikatstypen und deren jeweilige Anzahl pro Ausstellkanal (je Woche ein Tabellenblatt). Das zweite bis x-te Tabellenblatt weisst dabei zusätzlich die Differenz zur Vorwoche aus.",
     "reports.a8.description.short": "Wochenweise Anzahl Zertifikate pro Typ, gegliedert nach Ausstellkanal.",
