--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -223,6 +223,8 @@
     "reports.a7.cert-type.v": "Certificati di vaccinazione – Emissione in Svizzera: dal 07.06.2021",
     "reports.a7.cert-type.vt": "Certificati turistici (vaccino OMS) – Emissione in Svizzera: dal 30.11.2021 al 16.02.2022",
     "reports.a7.ch-certs": "Certificati svizzeri:",
+    "reports.a7.date-from": "Data di inizio",
+    "reports.a7.date-to": "Data di fine",
     "reports.a7.description.long": "<strong>Quale emittente ha rilasciato uno specifico tipo di certificato in un determinato periodo di tempo e quanti di questi certificati ha rilasciato? </strong></br></br>Dopo che è stato selezionato un tipo di certificato, questo rapporto fornisce un elenco di emittenti e il numero di certificati rilasciati del tipo in questione.",
     "reports.a7.description.short": "Panoramica di tutti gli emittenti di uno specifico tipo di certificato, compreso il canale di emissione, per un determinato periodo di tempo.",
     "reports.a7.eu-compatible-certs": "Certificati compatibili con l’UE",
@@ -230,6 +232,7 @@
     "reports.a7.select-all-cert-types": "Selezionare tutti i tipi di certificato",
     "reports.a7.select-cert-types": "Selezionare il tipo o i tipi di certificato per cui si desidera generare il rapporto:",
     "reports.a7.selected-dataroom": "Cantone/settore selezionato:",
+    "reports.a7.startDateBeforeEndDate": "La data di inizio non deve essere successiva alla data di fine",
     "reports.a7.title": "A7 / A10",
     "reports.a8.description.long": "<strong>Quanti certificati dei diversi tipi di certificato sono stati rilasciati ogni settimana (al massimo negli ultimi 3 mesi) e attraverso quali canali?</strong></br></br>Questo rapporto fornisce un elenco settimanale dei tipi di certificato rilasciati con il relativo numero per canale di emissione (un foglio di calcolo per settimana). Dal secondo all’ultimo foglio di calcolo viene inoltre mostrata la differenza totale rispetto alla settimana precedente.",
     "reports.a8.description.short": "Numero settimanale di certificati per tipo, suddivisi per canale di emissione.",
