VACCINECER-2248 add privacy statement into footer

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -118,10 +118,41 @@
     "dashboard.upload.action": "Mehrere Zertifikate generieren",
     "dashboard.upload.description": "Hier können Sie mehrere Zertifikate generieren.",
     "dashboard.upload.title": "Mehrere Zertifikate generieren",
+    "dataroom.ag": "Aargau",
+    "dataroom.ai": "Appenzell Innerrhoden",
+    "dataroom.ar": "Appenzell Ausserrhoden",
+    "dataroom.armee": "Armee",
+    "dataroom.be": "Bern",
+    "dataroom.bl": "Basel-Landschaft",
+    "dataroom.bs": "Basel-Stadt",
+    "dataroom.bv-intern": "BV-Intern",
+    "dataroom.fr": "Freiburg",
+    "dataroom.ge": "Genf",
+    "dataroom.ggg": "GGG",
+    "dataroom.gl": "Glarus",
+    "dataroom.gr": "Graubünden",
+    "dataroom.ju": "Jura",
+    "dataroom.lu": "Luzern",
+    "dataroom.ne": "Neuenburg",
+    "dataroom.nw": "Nidwalden",
+    "dataroom.ow": "Obwalden",
+    "dataroom.sg": "St. Gallen",
+    "dataroom.sh": "Schaffhausen",
+    "dataroom.so": "Solothurn",
+    "dataroom.sz": "Schwyz",
+    "dataroom.tg": "Thurgau",
+    "dataroom.ti": "Tessin",
+    "dataroom.ur": "Uri",
+    "dataroom.vd": "Waadt",
+    "dataroom.vs": "Wallis",
+    "dataroom.zg": "Zug",
+    "dataroom.zh": "Zürich",
     "footer.built.prefix": "Mit",
     "footer.built.suffix": "gebaut",
     "footer.legal": "Rechtliches",
     "footer.legal.url": "https://www.admin.ch/gov/de/start/rechtliches.html",
+    "footer.privacyStatement": "Datenschutzerklärung",
+    "footer.privacyStatement.url": "https://www.bit.admin.ch/bit/de/home/dokumentation/covid-certificate-app.html",
     "gracePeriodMessage": "Dieses Schnelltest-Produkt kann bis {{validUntil}} verwendet werden, nach diesem Datum ist es nicht mehr möglich, Zertifikate mit diesem Produkt zu erstellen.",
     "home.administration": "Anleitungen zur Benutzerverwaltung (delegiertes Management) durch Superuser",
     "home.faq": "Häufig gestellte Fragen (FAQ)",
@@ -174,7 +205,6 @@
     "reports.a12.title": "A12",
     "reports.a2.description.long": "<strong>Wer hat wann und über welchen Ausstellkanal dieses spezifische Zertifikat ausgestellt und welcher Zertifikatstyp war das?</strong></br></br>\nNach Eingabe der UVCI liefert Ihnen dieser Report Informationen zur Ausstellerin/zum Aussteller, den Ausstellzeitpunkt und -kanal sowie den Typ des gesuchten Zertifikats. Informationen zur Person, für die das Zertifikat ausgestellt wurde, sind nicht verfügbar.",
     "reports.a2.description.short": "Detailinformationen (Ausstellkanal, Aussteller/in, Zeitpunkt und Zertifikatstyp) zu einer spezifischen Zertifikats-UVCI. Informationen zur Person, für die das Zertifikat ausgestellt wurde, sind nicht verfügbar.",
-    "reports.a2.reset-input": "Eingabe zurücksetzen",
     "reports.a2.title": "A2",
     "reports.a3.description.long": "<strong>Wie viele Zertifikate welchen Typs hat ein spezifischer Aussteller in einem definierten Zeitraum über welche Kanäle ausgestellt?</strong></br></br>Dieser Report liefert Ihnen eine nach Aussteller/in gegliederte Liste mit der Summe der ausgestellten Zertifikatstypen und Ausstellkanäle.",
     "reports.a3.description.short": "Anzahl und Typ aller ausgestellten Zertifikate einer spezifischen Ausstellerin, eines spezifischen Ausstellers oder einer Organisationseinheit (Unit).",
@@ -186,8 +216,25 @@
     "reports.a5.description.short": "Anzahl und Typ aller ausgestellten Zertifikate einer spezifischen Ausstellerin, eines spezifischen Ausstellers oder einer Organisationseinheit (Unit).",
     "reports.a6.description.long": "<strong>Welche Zertifikate (UVCI, Typ, Zeitpunkt, Kanal) haben die einzelnen Aussteller/innen einer Unit in einem definierten Zeitraum ausgestellt?</strong></br></br>Nach der Auswahl und Suche der entsprechenden Einheiten (Organisation / Aussteller/in) liefert Ihnen dieser Report eine nach Aussteller/in gegliederte Liste mit den pro Aussteller/in ausgestellten Zertifikaten inkl. Details wie Zertifikatstyp, Ausstellkanal, Ausstellzeitpunkt und UVCI pro Zertifikat.",
     "reports.a6.description.short": "Detailinformationen zu allen ausgestellten Zertifikaten einer bestimmten Ausstellerin/ eines bestimmten Ausstellers oder Organisationseinheit (Unit). ",
+    "reports.a7.cert-type.a": "Genesungszertifikate Antikörper – Ausstellung in der Schweiz: 16.11.2021 bis 16.02.2022",
+    "reports.a7.cert-type.me": "Ausnahmezertifikate – Ausstellung in der Schweiz: 10.01.2022 bis 16.02.2022",
+    "reports.a7.cert-type.r": "Genesungszertifikate (PCR) – Ausstellung in der Schweiz: ab 07.06.2021",
+    "reports.a7.cert-type.rr": "Genesungszertifikate (RAT CH) – Ausstellung in der Schweiz: 24.01.2022 bis 16.02.2022",
+    "reports.a7.cert-type.rreu": "Genesungszertifikate (RAT EU) – Ausstellung in der Schweiz: ab 02.05.2022",
+    "reports.a7.cert-type.t": "Testzertifikate – Ausstellung in der Schweiz: ab 07.06.2021",
+    "reports.a7.cert-type.v": "Impfzertifikate – Ausstellung in der Schweiz: ab 07.06.2021",
+    "reports.a7.cert-type.vt": "Touristenzertifikate (WHO-Impfstoff) – Ausstellung in der Schweiz: 30.11.2021 bis 16.02.2022",
+    "reports.a7.ch-certs": "Schweizer Zertifikate:",
+    "reports.a7.date-from": "Anfangsdatum",
+    "reports.a7.date-to": "Enddatum",
     "reports.a7.description.long": "<strong>Welche/r Aussteller/in hat welche Anzahl eines spezifischen Zertifikatstyps in einem definierten Zeitraum ausgestellt? </strong></br></br>Dieser Report liefert Ihnen, nach Auswahl eines Zertifikatstyps, eine Liste von Aussteller/innen und die jeweilige Anzahl ausgestellter Zertifikate dieses Typs. ",
     "reports.a7.description.short": "Übersicht aller Aussteller/innen eines bestimmten Zertifikatstyps inkl. Ausstellkanal für einen definierten Zeitraum.",
+    "reports.a7.eu-compatible-certs": "EU-kompatible Zertifikate",
+    "reports.a7.period-text": "Bitte wählen Sie ein Anfangs- und ein Enddatum des Ausstellungszeitraums für den Report aus:",
+    "reports.a7.select-all-cert-types": "Alle Zertifikatstypen auswählen",
+    "reports.a7.select-cert-types": "Bitte wählen Sie den/die Zertifikatstypen aus, für den/die Sie den Report generieren wollen:",
+    "reports.a7.selected-dataroom": "Ausgewählter Kanton/Bereich:",
+    "reports.a7.startDateBeforeEndDate": "Anfangsdatum darf nicht nach dem Enddatum liegen",
     "reports.a7.title": "A7 / A10",
     "reports.a8.description.long": "<strong>Wie viele Zertifikate der verschiedenen Zertifikatstypen wurden pro Woche (max. letzte 3 Monate) über welche Kanäle ausgestellt?</strong></br></br>Dieser Report liefert Ihnen eine wochenweise Liste von Zertifikatstypen und deren jeweilige Anzahl pro Ausstellkanal (je Woche ein Tabellenblatt). Das zweite bis x-te Tabellenblatt weisst dabei zusätzlich die Differenz zur Vorwoche aus.",
     "reports.a8.description.short": "Wochenweise Anzahl Zertifikate pro Typ, gegliedert nach Ausstellkanal.",
@@ -210,6 +257,7 @@
     "reports.param-help.description": "Falls Sie Fragen zu den Parametern haben, wird hier jeder Parameter erklärt.",
     "reports.param-help.download": "Download Hilfestellung",
     "reports.param-help.title": "Hilfestellung Parameter",
+    "reports.reset-input": "Eingabe zurücksetzen",
     "reports.statistic.header": "Sie möchten einen allgemeinen Überblick über die Zertifikatsausstellung in der Schweiz in Form einer statistischen Auswertung erhalten? Erstellen Sie dazu einen Statistikreport.",
     "reports.uvci.format": "Format: urn:uvci:01:CH:xxxxxxxxxxxxxxxxxxxxxxxx",
     "reports.uvci.format.error": "Die UVCI muss im Format urn:uvci:01:CH:xxxxxxxxxxxxxxxxxxxxxxxx sein.",
