--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -151,6 +151,8 @@
     "footer.built.suffix": "costruito",
     "footer.legal": "Nota legale",
     "footer.legal.url": "https://www.admin.ch/gov/it/pagina-iniziale/basi-legali.html",
+    "footer.privacyStatement": "Informativa sulla privacy",
+    "footer.privacyStatement.url": "https://www.bit.admin.ch/bit/it/home/documentazione/covid-certificate-app.html",
     "gracePeriodMessage": "Questo prodotto per il test antigenico rapido può essere utilizzato fino al {{validUntil}}. Dopo tale data non è più possibile generare certificati COVID con questo prodotto.",
     "home.administration": "Istruzioni per l'amministrazione degli utenti (gestione delegata) da parte del superutente",
     "home.faq": "Domande frequenti (FAQ)",
