--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -125,7 +125,7 @@
     "dataroom.be": "Bern",
     "dataroom.bl": "Basel-Landschaft",
     "dataroom.bs": "Basel-Stadt",
-    "dataroom.bv-intern": "BV-Intern",
+    "dataroom.bv_intern": "BV-Intern",
     "dataroom.fr": "Freiburg",
     "dataroom.ge": "Genf",
     "dataroom.ggg": "GGG",
