--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -125,7 +125,7 @@
     "dataroom.be": "Berne",
     "dataroom.bl": "Basle-Country",
     "dataroom.bs": "Basle-City",
-    "dataroom.bv-intern": "BV-Intern",
+    "dataroom.bv_intern": "BV-Intern",
     "dataroom.fr": "Friburg",
     "dataroom.ge": "Geneva",
     "dataroom.ggg": "GGG",
