--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -125,7 +125,7 @@
     "dataroom.be": "Berne",
     "dataroom.bl": "Bâle-Campagne",
     "dataroom.bs": "Bâle-Ville",
-    "dataroom.bv-intern": "BV-Intern",
+    "dataroom.bv_intern": "BV-Intern",
     "dataroom.fr": "Fribourg",
     "dataroom.ge": "Genève",
     "dataroom.ggg": "GGG",
