--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -125,7 +125,7 @@
     "dataroom.be": "Berna",
     "dataroom.bl": "Basilea Campagna",
     "dataroom.bs": "Basilea Città",
-    "dataroom.bv-intern": "BV-Intern",
+    "dataroom.bv_intern": "BV-Intern",
     "dataroom.fr": "Friburgo",
     "dataroom.ge": "Ginevra",
     "dataroom.ggg": "GGG",
