Changed values of specific data room keys to match values for the backend

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -121,11 +121,11 @@
     "dataroom.ag": "Aargau",
     "dataroom.ai": "Appenzell Innerrhoden",
     "dataroom.ar": "Appenzell Ausserrhoden",
-    "dataroom.armee": "Armee",
+    "dataroom.arm": "Armee",
     "dataroom.be": "Bern",
     "dataroom.bl": "Basel-Landschaft",
     "dataroom.bs": "Basel-Stadt",
-    "dataroom.bv_intern": "BV-Intern",
+    "dataroom.buv": "Bundesverwaltung Intern",
     "dataroom.fr": "Freiburg",
     "dataroom.ge": "Genf",
     "dataroom.ggg": "GGG",
