--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -121,11 +121,11 @@
     "dataroom.ag": "Argovia",
     "dataroom.ai": "Appenzell Inner-Rhodes",
     "dataroom.ar": "Appenzell Outer-Rhodes",
-    "dataroom.armee": "Armee",
+    "dataroom.arm": "Army",
     "dataroom.be": "Berne",
     "dataroom.bl": "Basle-Country",
     "dataroom.bs": "Basle-City",
-    "dataroom.bv_intern": "BV-Intern",
+    "dataroom.buv": "Federal Administration Internal",
     "dataroom.fr": "Friburg",
     "dataroom.ge": "Geneva",
     "dataroom.ggg": "GGG",
