--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -121,11 +121,11 @@
     "dataroom.ag": "Argovia",
     "dataroom.ai": "Appenzello Interno",
     "dataroom.ar": "Appenzello Esterno",
-    "dataroom.armee": "Armee",
+    "dataroom.arm": "Esercito",
     "dataroom.be": "Berna",
     "dataroom.bl": "Basilea Campagna",
     "dataroom.bs": "Basilea Città",
-    "dataroom.bv_intern": "BV-Intern",
+    "dataroom.buv": "Amministrazione federale Interno",
     "dataroom.fr": "Friburgo",
     "dataroom.ge": "Ginevra",
     "dataroom.ggg": "GGG",
