--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -121,11 +121,11 @@
     "dataroom.ag": "Argovie",
     "dataroom.ai": "Appenzell Rhodes-Intérieures",
     "dataroom.ar": "Appenzell Rhodes-Extérieures",
-    "dataroom.armee": "Armee",
+    "dataroom.arm": "Armée",
     "dataroom.be": "Berne",
     "dataroom.bl": "Bâle-Campagne",
     "dataroom.bs": "Bâle-Ville",
-    "dataroom.bv_intern": "BV-Intern",
+    "dataroom.buv": "Administration fédérale Interne",
     "dataroom.fr": "Fribourg",
     "dataroom.ge": "Genève",
     "dataroom.ggg": "GGG",
