--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -244,6 +244,24 @@
     "reports.a9.description.short": "Gesamtanzahl Zertifikate eines Typs im gesamten Ausstellungszeitraum, gegliedert nach Ausstellkanal.",
     "reports.a9.title": "A9",
     "reports.aggregation.header": "Sie möchten prüfen, ob die Zahlen zur Zertifikatsausstellung in Ihrem Kanton auf einen allfälligen Missbrauchsfall hinweisen? Erstellen Sie dazu einen Aggregationsreport.",
+    "reports.certTypesSelection.cert-type.a": "Genesungszertifikate Antikörper – Ausstellung in der Schweiz: 16.11.2021 bis 16.02.2022",
+    "reports.certTypesSelection.cert-type.me": "Ausnahmezertifikate – Ausstellung in der Schweiz: 10.01.2022 bis 16.02.2022",
+    "reports.certTypesSelection.cert-type.r": "Genesungszertifikate (PCR) – Ausstellung in der Schweiz: ab 07.06.2021",
+    "reports.certTypesSelection.cert-type.rr": "Genesungszertifikate (RAT CH) – Ausstellung in der Schweiz: 24.01.2022 bis 16.02.2022",
+    "reports.certTypesSelection.cert-type.rreu": "Genesungszertifikate (RAT EU) – Ausstellung in der Schweiz: ab 02.05.2022",
+    "reports.certTypesSelection.cert-type.t": "Testzertifikate – Ausstellung in der Schweiz: ab 07.06.2021",
+    "reports.certTypesSelection.cert-type.v": "Impfzertifikate – Ausstellung in der Schweiz: ab 07.06.2021",
+    "reports.certTypesSelection.cert-type.vt": "Touristenzertifikate (WHO-Impfstoff) – Ausstellung in der Schweiz: 30.11.2021 bis 16.02.2022",
+    "reports.certTypesSelection.ch-certs": "Schweizer Zertifikate:",
+    "reports.certTypesSelection.eu-compatible-certs": "EU-kompatible Zertifikate:",
+    "reports.certTypesSelection.oneCertTypeHasToBeSelected": "Mindestens ein Zertifikatstyp muss ausgewählt sein",
+    "reports.certTypesSelection.select-all": "Alle Zertifikatstypen auswählen",
+    "reports.certTypesSelection.title": "Bitte wählen Sie den/die Zertifikatstypen aus, für den/die Sie den Report generieren wollen:",
+    "reports.dataRoomSelection": "Ausgewählter Kanton/Bereich:",
+    "reports.dateFromTo.date-from": "Anfangsdatum",
+    "reports.dateFromTo.date-to": "Enddatum",
+    "reports.dateFromTo.startDateBeforeEndDate": "Anfangsdatum darf nicht nach dem Enddatum liegen",
+    "reports.dateFromTo.text": "Bitte wählen Sie ein Anfangs- und ein Enddatum des Ausstellungszeitraums für den Report aus:",
     "reports.detail.header": "Sie möchten einen konkreten Verdachtsfall belegen oder widerlegen, indem Sie die einzelnen Aktionen einer Ausstellerin/eines Ausstellers analysieren? Erstellen Sie dazu einen Detailreport.",
     "reports.generate": "Report generieren",
     "reports.generate.new": "Neuen Report generieren",
