--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -244,6 +244,24 @@
     "reports.a9.description.short": "Nombre total de certificats d’un type donné, ventilé par canal d’émission, pour l’ensemble de la période d’émission.",
     "reports.a9.title": "A9",
     "reports.aggregation.header": "Vous souhaitez vérifier si le nombre de certificats établis dans votre canton révèle d’éventuels abus ? Rédigez un rapport d’agrégation.",
+    "reports.certTypesSelection.cert-type.a": "Certificats de guérison (anticorps) – Émission en Suisse : du 16.11.2021 au 16.02.2022",
+    "reports.certTypesSelection.cert-type.me": "Certificats de dérogation – Émission en Suisse : du 10.01.2022 au 16.02.2022",
+    "reports.certTypesSelection.cert-type.r": "Certificats de guérison (PCR) – Émission en Suisse : à partir du 07.06.2021",
+    "reports.certTypesSelection.cert-type.rr": "Certificats de guérison (RAT CH) – Émission en Suisse : du 24.01.2022 au 16.02.2022",
+    "reports.certTypesSelection.cert-type.rreu": "Certificats de guérison (RAT UE) – Émission en Suisse : à partir du 02.05.2022",
+    "reports.certTypesSelection.cert-type.t": "Certificats de test – Émission en Suisse : à partir du 07.06.2021",
+    "reports.certTypesSelection.cert-type.v": "Certificats de vaccination – Émission en Suisse : à partir du 07.06.2021",
+    "reports.certTypesSelection.cert-type.vt": "Certificats pour touristes (vaccins OMS) – Émission en Suisse : du 30.11.2021 au 16.02.2022",
+    "reports.certTypesSelection.ch-certs": "Certificats suisses:",
+    "reports.certTypesSelection.eu-compatible-certs": "Certificats compatibles avec l’UE:",
+    "reports.certTypesSelection.oneCertTypeHasToBeSelected": "Au moins un type de certificat doit être sélectionné",
+    "reports.certTypesSelection.select-all": "Sélectioner tous les types de certificats",
+    "reports.certTypesSelection.title": "Veuillez sélectionner le(s) type(s) de certificat pour le(s)quel(s) vous souhaitez générer le rapport:",
+    "reports.dataRoomSelection": "Canton/domaine sélectionné:",
+    "reports.dateFromTo.date-from": "Date de début",
+    "reports.dateFromTo.date-to": "Date de fin",
+    "reports.dateFromTo.startDateBeforeEndDate": "La date de début ne doit pas être postérieure à la date de fin",
+    "reports.dateFromTo.text": "Veuillez sélectionner une date de début et une date de fin de la période d’émission pour le rapport:",
     "reports.detail.header": "Vous souhaitez confirmer ou infirmer un soupçon concret en analysant les activités d’un émetteur précis ? Rédigez un rapport de détail.",
     "reports.generate": "Générer le rapport",
     "reports.generate.new": "Générer un nouveau rapport",
