--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -244,6 +244,24 @@
     "reports.a9.description.short": "Numero totale di certificati di un tipo specifico, suddivisi per canale di emissione nell’intero periodo di emissione.",
     "reports.a9.title": "A9",
     "reports.aggregation.header": "Desidera verificare se le cifre relative ai certificati emessi nel Suo Cantone sono indice di un possibile caso di abuso? Crei un rapporto di aggregazione.",
+    "reports.certTypesSelection.cert-type.a": "Certificati di guarigione anticorpi – Emissione in Svizzera: dal 16.11.2021 al 16.02.2022",
+    "reports.certTypesSelection.cert-type.me": "Certificati di deroga – Emissione in Svizzera: dal 10.01.2022 al 16.02.2022",
+    "reports.certTypesSelection.cert-type.r": "Certificati di guarigione (PCR) – Emissione in Svizzera: dal 07.06.2021",
+    "reports.certTypesSelection.cert-type.rr": "Certificati di guarigione (RAT CH) – Emissione in Svizzera: dal 24.01.2022 al 16.02.2022",
+    "reports.certTypesSelection.cert-type.rreu": "Certificati di guarigione (RAT UE) – Emissione in Svizzera: dal 02.05.2022",
+    "reports.certTypesSelection.cert-type.t": "Certificati di test – Emissione in Svizzera: dal 07.06.2021",
+    "reports.certTypesSelection.cert-type.v": "Certificati di vaccinazione – Emissione in Svizzera: dal 07.06.2021",
+    "reports.certTypesSelection.cert-type.vt": "Certificati turistici (vaccino OMS) – Emissione in Svizzera: dal 30.11.2021 al 16.02.2022",
+    "reports.certTypesSelection.ch-certs": "Certificati svizzeri:",
+    "reports.certTypesSelection.eu-compatible-certs": "Certificati compatibili con l’UE:",
+    "reports.certTypesSelection.oneCertTypeHasToBeSelected": "È necessario selezionare almeno un tipo di certificato",
+    "reports.certTypesSelection.select-all": "Selezionare tutti i tipi di certificato",
+    "reports.certTypesSelection.title": "Selezionare il tipo o i tipi di certificato per cui si desidera generare il rapporto:",
+    "reports.dataRoomSelection": "Cantone/settore selezionato:",
+    "reports.dateFromTo.date-from": "Data di inizio",
+    "reports.dateFromTo.date-to": "Data di fine",
+    "reports.dateFromTo.startDateBeforeEndDate": "La data di inizio non deve essere successiva alla data di fine",
+    "reports.dateFromTo.text": "Selezionare una data di inizio e una data di fine del periodo di emissione per il rapporto:",
     "reports.detail.header": "Desidera confermare o confutare un caso concreto di sospetto abuso analizzando le singole azioni di un dato emittente? Crei un rapporto di dettaglio.",
     "reports.generate": "Genera il rapporto",
     "reports.generate.new": "Generare un nuovo rapporto",
