--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -121,7 +121,7 @@
     "dataroom.ag": "Argovia",
     "dataroom.ai": "Appenzell Inner-Rhodes",
     "dataroom.ar": "Appenzell Outer-Rhodes",
-    "dataroom.arm": "Army",
+    "dataroom.arm": "Armed Forces",
     "dataroom.be": "Berne",
     "dataroom.bl": "Basle-Country",
     "dataroom.bs": "Basle-City",
@@ -244,6 +244,24 @@
     "reports.a9.description.short": "Total number of certificates of a type, broken down by issuing channel, in the entire issue period.",
     "reports.a9.title": "A9",
     "reports.aggregation.header": "Desidera ottenere una panoramica generale dei certificati emessi in Svizzera sotto forma di analisi statistica? Crei un rapporto statistico.",
+    "reports.certTypesSelection.cert-type.a": "Recovery certificates (antibody) – issue period in Switzerland: 16.11.2021 to 16.02.2022",
+    "reports.certTypesSelection.cert-type.me": "Exemption certificates – issue period in Switzerland: 10.01.2022 to 16.02.2022",
+    "reports.certTypesSelection.cert-type.r": "Recovery certificates (PCR) – issue period in Switzerland: as of 07.06.2021",
+    "reports.certTypesSelection.cert-type.rr": "Recovery certificates (RAT CH) – issue period in Switzerland: 24.01.2022 to 16.02.2022",
+    "reports.certTypesSelection.cert-type.rreu": "Recovery certificates (RAT EU) – issue period in Switzerland: as of 02.05.2022",
+    "reports.certTypesSelection.cert-type.t": "Test certificates – issue period in Switzerland: as of 07.06.2021",
+    "reports.certTypesSelection.cert-type.v": "Vaccination certificates – issue period in Switzerland: as of 07.06.2021",
+    "reports.certTypesSelection.cert-type.vt": "Tourist certificates (WHO vaccine) – issue period in Switzerland: 30.11.2021 to 16.02.2022",
+    "reports.certTypesSelection.ch-certs": "Swiss certificates:",
+    "reports.certTypesSelection.eu-compatible-certs": "EU-compatible certificates:",
+    "reports.certTypesSelection.oneCertTypeHasToBeSelected": "At least one certificate type must be selected",
+    "reports.certTypesSelection.select-all": "Select all certificate types",
+    "reports.certTypesSelection.title": "Please choose the certificate type(s) for which you want to generate the report:",
+    "reports.dataRoomSelection": "Canton/area selected:",
+    "reports.dateFromTo.date-from": "Start date",
+    "reports.dateFromTo.date-to": "End date",
+    "reports.dateFromTo.startDateBeforeEndDate": "Start date must not be after the end date",
+    "reports.dateFromTo.text": "Please select a start and end date for the issue period for the report:",
     "reports.detail.header": "Want to prove or refute a concrete case of suspicion by analysing the individual actions of an issuer? Then create an detailed report.",
     "reports.generate": "Generate report",
     "reports.generate.new": "Generate new report",
