--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -260,6 +260,7 @@
     "reports.dataRoomSelection": "Cantone/settore selezionato:",
     "reports.dateFromTo.date-from": "Data di inizio",
     "reports.dateFromTo.date-to": "Data di fine",
+    "reports.dateFromTo.dateTooSmall": "La data deve essere successiva al 30.04.2021",
     "reports.dateFromTo.startDateBeforeEndDate": "La data di inizio non deve essere successiva alla data di fine",
     "reports.dateFromTo.text": "Selezionare una data di inizio e una data di fine del periodo di emissione per il rapporto:",
     "reports.detail.header": "Desidera confermare o confutare un caso concreto di sospetto abuso analizzando le singole azioni di un dato emittente? Crei un rapporto di dettaglio.",
